Switched to java 16